--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -2,9 +2,9 @@
   border: none;
   background-color: #FFFFFF;
   cursor: pointer;
-  width: 22px;
+  max-width: 22px;
   width: 100%;
-  height: 19px;
+  min-height: 19px;
   background-size: cover;
   background-position: center;
   background-image: url(../../../images/Vector.png);
