сделать верстку,прописать код в js

--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -4,7 +4,7 @@
   cursor: pointer;
   max-width: 22px;
   width: 100%;
-  min-height: 19px;
+  height: 19px;
   background-size: cover;
   background-position: center;
   background-image: url(../../../images/Vector.png);
