--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -2,7 +2,7 @@
   border: none;
   background-color: #FFFFFF;
   cursor: pointer;
-  max-width: 22px;
+  width: 22px;
   width: 100%;
   height: 19px;
   background-size: cover;
