--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -6,7 +6,7 @@
   height: 19px;
   background-size: cover;
   background-position: center;
-  background-image: url(../../../images/Vector.png);
+  background-image: url(../../../images/Vector-2.svg);
   transition:linear ease-in-out 0,2s;
 }
 
