--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,9 +1,11 @@
-.elements{
+.elements {
   max-width: 880px;
-  width: 100%;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-  gap: 20px 17px;
-  justify-items: center;
+  padding: 51px 19px 0 19px;
+}
+
+@media screen and (max-width: 660px) {
+  .elements {
+    padding-top: 36px;
+  }
 }
