--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,11 @@
-.footer{
-  max-width: 880px;
+.footer {
+  max-width: 918px;
   margin: 0 auto;
+  padding: 66px 19px 60px 19px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 1279px) {
+@media screen and (max-width: 660px) {
   .footer {
-    padding-left: 19px;
-    box-sizing: border-box;
+    padding-top: 48px;
   }
 }
