--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,13 +1,11 @@
-.header__logo{
+.header__logo {
+  padding-bottom: 35px;
   max-width: 142px;
-  object-fit: cover;
-  padding-bottom: 41px;
-
 }
 
-@media screen and (min-width: 320px) and (max-width: 1279px) {
+@media screen and (max-width: 767px) {
   .header__logo {
-    max-width: 103.74px;
-    padding-bottom: 30px;
+    padding-bottom: 26px;
+    max-width: 104px;
   }
 }
