--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,18 +1,17 @@
 .popup__title {
-    color: #000;
-    max-width: 330px;
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 29px;
-    margin: 0;
-    margin-bottom: 54px;
+  font-family: 'Inter', Arial, sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+  margin: 0;
+  padding: 34px 0 0 36px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 1279px) {
-    .popup__title {
-        max-width: 238px;
-        font-size: 18px;
-        line-height: 22px;
-        margin-bottom: 75px;
-    }
+@media screen and (max-width: 580px) {
+  .popup__title {
+    padding-top: 26px;
+    font-size: 18px;
+    line-height: 22px;
+    padding-left: 22px;
+  }
 }
