--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,16 +1,12 @@
-.popup{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    top: 0;
-    left: 0;
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    opacity: 0;
-    z-index: 1;
+.popup {
+  display: none;
+  position: fixed;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
-
-
-
