--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,28 +1,17 @@
-.profile{
-  max-width: 880px;
+.profile {
+  max-width: 918px;
   margin: 0 auto;
-  padding: 40px 0 51px 0;
-  display: flex;
+  box-sizing: border-box;
+  padding: 40px 18px 0 18px;
   align-items: center;
-  gap: 30px;
-  flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 150px;
 }
 
-@media screen and (min-width: 744px) and (max-width: 1279px) {
+@media screen and (max-width: 660px) {
   .profile {
-    padding-top: 42px;
-    padding-left: 27px;
-    padding-bottom: 36px;
-    gap: 26px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 743px) {
-  .profile {
-    padding-top: 42px;
-    padding-left: 0;
-    padding-bottom: 36px;
-    gap: 26px;
+    grid-template-columns: 1fr;
+    row-gap: 30px;
   }
 }
