--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,14 @@
 .footer {
-  max-width: 918px;
+  width: 318px;
+  height: 18px;
   margin: 0 auto;
-  padding: 66px 19px 60px 19px;
+  padding: 67px 762px 60px 200px;
 }
 
 @media screen and (max-width: 660px) {
   .footer {
-    padding-top: 48px;
+    width: 282px;
+    height: 14px;
+    padding: 48px 19px 36px 19px;
   }
 }
