--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,13 +1,13 @@
 .popup__form {
-  min-width: 430px;
-  min-height: 330px;
+  width: 430px;
+  height: 330px;
   background-color: #fff;
   border-radius: 10px;
 }
 
 @media screen and (max-width: 580px) {
   .popup__form {
-    min-width: 282px;
-    min-height: 322px;
+    width: 282px;
+    height: 322px;
   }
 }
