--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,7 +4,7 @@
   width: 83%;
   background: #000000;
   color: #fff;
-  border: 0;
+  border-radius: 2px;
   min-height: 50px;
   font-family: 'Inter', Arial, sans-serif;
   font-size: 18px;
