--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,14 +1,13 @@
 .footer {
-  width: 318px;
-  height: 18px;
-  margin: 0 auto;
-  padding: 67px 762px 60px 200px;
+  min-width: 318px;
+  margin: 67px auto 60px;
+  padding: 0 200px;
 }
 
 @media screen and (max-width: 660px) {
   .footer {
-    width: 282px;
-    height: 14px;
-    padding: 48px 19px 36px 19px;
+    min-width: 282px;
+    margin: 48px 19px 36px;
+    padding: 0;
   }
 }
