--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,13 +1,14 @@
 .popup__form {
   width: 430px;
-  height: 330px;
+  max-width: 100%;
   background-color: #fff;
   border-radius: 10px;
+  padding: 30px;
+  box-sizing: border-box;
 }
-
 @media screen and (max-width: 580px) {
   .popup__form {
     width: 282px;
-    height: 322px;
+    padding: 20px;
   }
 }
