--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,9 +1,11 @@
 .popup__save-button {
   display: block;
-  margin: 46px auto 0 auto;
-  width: 83%;
+  margin: 20px auto 0 auto;
+  width: 100%;
+  max-width: 430px;
   background: #000000;
   color: #fff;
+  border: 0;
   border-radius: 2px;
   min-height: 50px;
   font-family: 'Inter', Arial, sans-serif;
@@ -15,7 +17,7 @@
 }
 
 .popup__save-button:hover {
-  opacity: 80%;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 580px) {
